# htmx-thing

./: Cargo.toml
src/: main.rs
templates/: form.html  hello.txt  index.html  layout.html  mouse.html  tyler.html
