[package]
name = "htmx-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["json"] }
minijinja = { version = "1.0.9", features = ["loader"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
urlencoding = "2.1.3"
